[gd_scene load_steps=5 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://Tetromino/Tetromino.tscn" type="PackedScene" id=2]
[ext_resource path="res://BricksHandler.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 64, 288 )

[node name="Node2D" type="Node2D" index="0"]

script = ExtResource( 1 )
_sections_unfolded = [ "Visibility" ]

[node name="Tetromino" parent="." index="0" instance=ExtResource( 2 )]

editor/display_folded = true
position = Vector2( 160, 32 )

[node name="Border" type="StaticBody2D" parent="." index="1"]

input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="LeftWall" type="CollisionShape2D" parent="Border" index="0"]

position = Vector2( -64, 288 )
shape = SubResource( 1 )

[node name="RightWall" type="CollisionShape2D" parent="Border" index="1"]

position = Vector2( 384, 288 )
shape = SubResource( 1 )

[node name="Floor" type="CollisionShape2D" parent="Border" index="2"]

position = Vector2( 160, 640 )
rotation = 1.5708
shape = SubResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="BricksHandler" type="StaticBody2D" parent="." index="2"]

input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
script = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[connection signal="bricks_added" from="." to="BricksHandler" method="_bricks_added"]

[connection signal="collided" from="Tetromino" to="." method="tetromino_collided"]


